tests/parser/should_fail/print_statements_modules.csp
module X
exports
print 0
endmodule
